Add Member & Role Management in Task App

--- a/roblox_showcase/templates/roblox_showcase/index.html
+++ b/roblox_showcase/templates/roblox_showcase/index.html
@@ -186,7 +186,10 @@
         <div class="row justify-content-center mb-5">
             <div class="col-lg-10">
                 <div class="video-wrapper">
-                    <iframe src="https://www.youtube.com/embed/Aq5WXmQQooo?list=RDAq5WXmQQooo" title="Game Trailer" allowfullscreen></iframe>
+                    <a href="https://www.youtube.com/shorts/RfyurCtdVY0" target="_blank">
+                        <img src="https://img.youtube.com/vi/RfyurCtdVY0/maxresdefault.jpg" alt="ดูวิดีโอตัวอย่าง" style="width:100%; border-radius:10px;">
+                        <p class="text-center mt-2">▶️ คลิกเพื่อดูวิดีโอตัวอย่างบน YouTube</p>
+                    </a>
                 </div>
             </div>
         </div>
